Fix nav menu getting cut off without scroll on horizontal mobile devices

--- a/web-app/components/navbar/nav-menu.module.css
+++ b/web-app/components/navbar/nav-menu.module.css
@@ -1,6 +1,5 @@
 .navMenu {
   will-change: transform;
-  touch-action: none;
 
   position: fixed;
   top: var(--nav-height);
